added badges in userlist to identify modders nicer